Added footers to page, redid the style / look

--- a/html/games/game3p.html
+++ b/html/games/game3p.html
@@ -758,6 +758,29 @@
         </div>
       </div>
 
+      <footer class="page-footer #00695c teal darken-3">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">
+                <a class="grey-text text-lighten-3" href="../about.html">About</a>
+              </h5>
+            </div>
+            <div class="col l4 offset-l2 s12">
+              <h5 class="white-text">Navigate the mothership</h5>
+              <ul>
+                <li><a class="grey-text text-lighten-3" href="../home.html">Home</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+          &copy; 2016 Tyler Miller
+          </div>
+        </div>
+      </footer>
+
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
