--- a/html/games/game2p.html
+++ b/html/games/game2p.html
@@ -8,7 +8,7 @@
   </head>
   <body class="noselect">
 
-    <div class="#607d8b blue-grey" id="container">
+    <div class="#212a34" id="container">
       <div class="row">
 
         <div class="col s4 m4 l4 offset-s1 offset-m1 offset-l1 noselect" >
@@ -694,6 +694,29 @@
         </div>
       </div>
 
+      <footer class="page-footer #00695c teal darken-3">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">
+                <a class="grey-text text-lighten-3" href="../about.html">About</a>
+              </h5>
+            </div>
+            <div class="col l4 offset-l2 s12">
+              <h5 class="white-text">Navigate the mothership</h5>
+              <ul>
+                <li><a class="grey-text text-lighten-3" href="../home.html">Home</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+          &copy; 2016 Tyler Miller
+          </div>
+        </div>
+      </footer>
+      
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
