--- a/html/games/game2p.html
+++ b/html/games/game2p.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link rel="stylesheet" href="../../css/gameboard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="shortcut icon" href="../../images/space-ship.png" />
+    <title>Wikody: 2 Player</title>
   </head>
   <body class="noselect">
 
-    <div class="#212a34" id="container">
+    <div class="" id="container">
       <div class="row">
 
         <div class="col s4 m4 l4 offset-s1 offset-m1 offset-l1 noselect" >
@@ -716,7 +718,7 @@
           </div>
         </div>
       </footer>
-      
+
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
