--- a/html/games/game3p.html
+++ b/html/games/game3p.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="../../css/gameboard.css">
+    <link rel="shortcut icon" href="../../images/space-ship.png" />
+    <title>Wikody: 3 Player</title>
   </head>
   <body class="noselect">
 
-    <div class="#607d8b blue-grey" id="container">
+    <div class="" id="container">
       <div class="row">
 
         <div class="col s2 m2 l2 offset-s2 offset-m2 offset-l2 noselect" >
@@ -759,13 +761,15 @@
       </div>
 
       <footer class="page-footer #00695c teal darken-3">
-        <div class="container">
+
+        s<div class="container">
           <div class="row">
             <div class="col l6 s12">
               <h5 class="white-text">
                 <a class="grey-text text-lighten-3" href="../about.html">About</a>
               </h5>
             </div>
+
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Navigate the mothership</h5>
               <ul>
@@ -774,11 +778,13 @@
             </div>
           </div>
         </div>
+
         <div class="footer-copyright">
           <div class="container">
           &copy; 2016 Tyler Miller
           </div>
         </div>
+
       </footer>
 
     </div>
