--- a/html/games/game4p.html
+++ b/html/games/game4p.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link rel="stylesheet" href="../../css/gameboard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="shortcut icon" href="../../images/space-ship.png" />
+    <title>Wikody: 4 Player</title>
   </head>
   <body class="noselect">
 
-    <div class="#607d8b blue-grey" id="container">
+    <div class="" id="container">
       <div class="row">
 
         <div class="col s2 m2 l2 offset-s2 offset-m2 offset-l2 noselect" >
