--- a/html/home.html
+++ b/html/home.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="../css/home.css">
+    <link rel="shortcut icon" href="../images/space-ship.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Wikody</title>
   </head>
@@ -18,7 +19,7 @@
 
       <div class="row">
         <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3 noselect" >
-          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3"><span class="headers">Wikody</span></p>
+          <p class="z-depth-5 center #b0bec5 blue-grey lighten-3"><span class="headers">Wikody</span></p>
         </div>
       </div>
 
