--- a/html/games/game2p.html
+++ b/html/games/game2p.html
@@ -11,6 +11,15 @@
   <body class="noselect">
 
     <div class="" id="container">
+
+      <div class="row">
+        <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+          <div class="progress">
+            <div class="determinate" style="width: 0%"></div>
+          </div>
+        </div>
+      </div>
+
       <div class="row">
 
         <div class="col s4 m4 l4 offset-s1 offset-m1 offset-l1 noselect" >
