--- a/html/games/game4p.html
+++ b/html/games/game4p.html
@@ -11,6 +11,15 @@
   <body class="noselect">
 
     <div class="" id="container">
+
+      <div class="row">
+        <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+          <div class="progress">
+            <div class="determinate" style="width: 0%"></div>
+          </div>
+        </div>
+      </div>
+
       <div class="row">
 
         <div class="col s2 m2 l2 offset-s2 offset-m2 offset-l2 noselect" >
