--- a/html/games/game2p.html
+++ b/html/games/game2p.html
@@ -100,7 +100,7 @@
             <a class="modal-trigger waves-effect waves-light btn col1" href="#divArt1">200</a>
             <div id="divArt1" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row1col1">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -120,7 +120,7 @@
             <a class="modal-trigger waves-effect waves-light btn col2" href="#divArt2">200</a>
             <div id="divArt2" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row1col2">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -140,7 +140,7 @@
             <a class="modal-trigger waves-effect waves-light btn col3" href="#divArt3">200</a>
             <div id="divArt3" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row1col3">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -160,7 +160,7 @@
             <a class="modal-trigger waves-effect waves-light btn col4" href="#divArt4">200</a>
             <div id="divArt4" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row1col4">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -180,7 +180,7 @@
             <a class="modal-trigger waves-effect waves-light btn col5" href="#divArt5">200</a>
             <div id="divArt5" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row1col5">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -200,7 +200,7 @@
             <a class="modal-trigger waves-effect waves-light btn col6" href="#divArt6">200</a>
             <div id="divArt6" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row1col6">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -222,7 +222,7 @@
             <a class="modal-trigger waves-effect waves-light btn col1" href="#divArt7">400</a>
             <div id="divArt7" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row2col1">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -242,7 +242,7 @@
             <a class="modal-trigger waves-effect waves-light btn col2" href="#divArt8">400</a>
             <div id="divArt8" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row2col2">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -262,7 +262,7 @@
             <a class="modal-trigger waves-effect waves-light btn col3" href="#divArt9">400</a>
             <div id="divArt9" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row2col3">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -282,7 +282,7 @@
             <a class="modal-trigger waves-effect waves-light btn col4" href="#divArt10">400</a>
             <div id="divArt10" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row2col4">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -302,7 +302,7 @@
             <a class="modal-trigger waves-effect waves-light btn col5" href="#divArt11">400</a>
             <div id="divArt11" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row2col5">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -322,7 +322,7 @@
             <a class="modal-trigger waves-effect waves-light btn col6" href="#divArt12">400</a>
             <div id="divArt12" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row2col6">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -344,7 +344,7 @@
             <a class="modal-trigger waves-effect waves-light btn col1" href="#divArt13">600</a>
             <div id="divArt13" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row3col1">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -364,7 +364,7 @@
             <a class="modal-trigger waves-effect waves-light btn col2" href="#divArt14">600</a>
             <div id="divArt14" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row3col2">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -384,7 +384,7 @@
             <a class="modal-trigger waves-effect waves-light btn col3" href="#divArt15">600</a>
             <div id="divArt15" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row3col3">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -404,7 +404,7 @@
             <a class="modal-trigger waves-effect waves-light btn col4" href="#divArt16">600</a>
             <div id="divArt16" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row3col4">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -424,7 +424,7 @@
             <a class="modal-trigger waves-effect waves-light btn col5" href="#divArt17">600</a>
             <div id="divArt17" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row3col5">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -444,7 +444,7 @@
             <a class="modal-trigger waves-effect waves-light btn col6" href="#divArt18">600</a>
             <div id="divArt18" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row3col6">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -464,9 +464,9 @@
         <div class="col s1 m1 l1 offset-s3 offset-m3 offset-l3">
           <div class="modal-button-container">
             <a class="modal-trigger waves-effect waves-light btn col1" href="#divArt19">800</a>
-            <div id="divArt18" class="modal modal-fixed-footer">
+            <div id="divArt19" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row4col1">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -486,7 +486,7 @@
             <a class="modal-trigger waves-effect waves-light btn col2" href="#divArt20">800</a>
             <div id="divArt20" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row4col2">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -506,7 +506,7 @@
             <a class="modal-trigger waves-effect waves-light btn col3" href="#divArt21">800</a>
             <div id="divArt21" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row4col3">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -526,7 +526,7 @@
             <a class="modal-trigger waves-effect waves-light btn col4" href="#divArt22">800</a>
             <div id="divArt22" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row4col4">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -546,7 +546,7 @@
             <a class="modal-trigger waves-effect waves-light btn col5" href="#divArt23">800</a>
             <div id="divArt23" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row4col5">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -566,7 +566,7 @@
             <a class="modal-trigger waves-effect waves-light btn col6" href="#divArt24">800</a>
             <div id="divArt24" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row4col6">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -588,7 +588,7 @@
             <a class="modal-trigger waves-effect waves-light btn col1" href="#divArt25">1000</a>
             <div id="divArt25" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row5col1">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -608,7 +608,7 @@
             <a class="modal-trigger waves-effect waves-light btn col2" href="#divArt26">1000</a>
             <div id="divArt26" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row5col2">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -628,7 +628,7 @@
             <a class="modal-trigger waves-effect waves-light btn col3" href="#divArt27">1000</a>
             <div id="divArt27" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row5col3">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -648,7 +648,7 @@
             <a class="modal-trigger waves-effect waves-light btn col4" href="#divArt28">1000</a>
             <div id="divArt28" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row5col4">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -668,7 +668,7 @@
             <a class="modal-trigger waves-effect waves-light btn col5" href="#divArt29">1000</a>
             <div id="divArt29" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row5col5">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
@@ -688,7 +688,7 @@
             <a class="modal-trigger waves-effect waves-light btn col6" href="#divArt30">1000</a>
             <div id="divArt30" class="modal modal-fixed-footer">
               <div class="modal-content">
-                <p class="article-question">A bunch of text</p>
+                <p class="article-question" id="row5col6">Loading...</p>
               </div>
               <div class="modal-footer">
                 <div class="row">
