turn-based gameplay implemented, scoring next

--- a/html/games/game4p.html
+++ b/html/games/game4p.html
@@ -20,24 +20,36 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row" id="playerContainer">
 
         <div class="col s2 m2 l2 offset-s2 offset-m2 offset-l2 noselect" >
-          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3"><span class="players">Player 1</span></p>
+          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player1"><span class="players">Player 1</span></p>
         </div>
 
         <div class="col s2 m2 l2 noselect" >
-          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3"><span class="players">Player 2</span></p>
+          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player2"><span class="players">Player 2</span></p>
         </div>
 
         <div class="col s2 m2 l2 noselect" >
-          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3"><span class="players">Player 3</span></p>
+          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player3"><span class="players">Player 3</span></p>
         </div>
 
         <div class="col s2 m2 l2 noselect" >
-          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3"><span class="players">Player 4</span></p>
+          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player4"><span class="players">Player 4</span></p>
         </div>
 
+      </div>
+
+      <div class="row">
+        <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+          <div class="card horizontal" id="infoContainer">
+            <div class="card-stacked">
+              <div class="card-content">
+                <p class="center" id="gameInfo">Hello.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="row">
