--- a/html/home.html
+++ b/html/home.html
@@ -13,9 +13,10 @@
 
     <div class="#607d8b blue-grey" id="container">
 
-        <!-- <video playsinline autoplay muted loop poster="../images/snl-jeapordy-backup.jpg" id="bgvid">
-          <source src="../images/sn-jeapordy.mp4" type="video/mp4">
-        </video> -->
+      <video playsinline autoplay muted loop id="bgvid">
+        <source src="../images/sn-jeapordy.mp4" type="video/mp4">
+        <!-- <source src="../images/sn-jeapordy.mp4" type="video/webm"> -->
+      </video>
 
       <div class="row">
         <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3 noselect" >
