--- a/html/games/game4p.html
+++ b/html/games/game4p.html
@@ -3,6 +3,7 @@
   <head>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:500" rel="stylesheet">
     <link rel="stylesheet" href="../../css/gameboard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="../../images/space-ship.png" />
@@ -21,23 +22,65 @@
       </div>
 
       <div class="row" id="playerContainer">
-
         <div class="col s2 m2 l2 offset-s2 offset-m2 offset-l2 noselect" >
-          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player1"><span class="players">Player 1</span></p>
-        </div>
+         <div class="row">
+           <div class="col s8 m8 l8">
+             <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player1">
+               <span class="players">Player 1</span>
+             </p>
+           </div>
+           <div class="col s4 m4 l4">
+             <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
+               <span id="score1">0000</span>
+             </p>
+           </div>
+         </div>
+       </div>
 
-        <div class="col s2 m2 l2 noselect" >
-          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player2"><span class="players">Player 2</span></p>
-        </div>
+       <div class="col s2 m2 l2 noselect" >
+         <div class="row">
+           <div class="col s8 m8 l8">
+             <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player2">
+               <span class="players">Player 2</span>
+             </p>
+           </div>
+           <div class="col s4 m4 l4">
+             <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
+               <span id="score2">0000</span>
+             </p>
+           </div>
+         </div>
+       </div>
 
-        <div class="col s2 m2 l2 noselect" >
-          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player3"><span class="players">Player 3</span></p>
-        </div>
+       <div class="col s2 m2 l2 noselect" >
+         <div class="row">
+           <div class="col s8 m8 l8">
+             <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player3">
+               <span class="players">Player 3</span>
+             </p>
+           </div>
+           <div class="col s4 m4 l4">
+             <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
+               <span id="score3">0000</span>
+             </p>
+           </div>
+         </div>
+       </div>
 
-        <div class="col s2 m2 l2 noselect" >
-          <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player4"><span class="players">Player 4</span></p>
-        </div>
-
+       <div class="col s2 m2 l2 noselect" >
+         <div class="row">
+           <div class="col s8 m8 l8">
+             <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player4">
+               <span class="players">Player 4</span>
+             </p>
+           </div>
+           <div class="col s4 m4 l4">
+             <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
+               <span id="score4">0000</span>
+             </p>
+           </div>
+         </div>
+       </div>
       </div>
 
       <div class="row">
@@ -45,7 +88,7 @@
           <div class="card horizontal" id="infoContainer">
             <div class="card-stacked">
               <div class="card-content">
-                <p class="center" id="gameInfo">Hello.</p>
+                <p class="center" id="gameInfo">Player 1 pick a category!</p>
               </div>
             </div>
           </div>
