More stylizing, score below player

--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <div class="#607d8b blue-grey" id="container">
+    <div id="container">
 
       <video playsinline autoplay muted loop id="bgvid">
         <source src="../images/sn-jeapordy.mp4" type="video/mp4">
