--- a/html/games/game2p.html
+++ b/html/games/game2p.html
@@ -23,33 +23,39 @@
 
       <div class="row" id="playerContainer">
 
-        <div class="col s4 m4 l4 offset-s1 offset-m1 offset-l1 noselect" >
+        <div class="col s4 m4 l4 offset-s2 offset-m2 offset-l2 noselect">
           <div class="row">
-            <div class="col s8 m8 l8">
+
+            <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player1">
                 <span class="players">Player 1</span>
               </p>
             </div>
-            <div class="col s4 m4 l4">
+
+            <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
                 <span id="score1">0000</span>
               </p>
             </div>
+
           </div>
         </div>
 
-        <div class="col s4 m4 l4 offset-s2 offset-m2 offset-l2 noselect" >
+        <div class="col s4 m4 l4 noselect">
           <div class="row">
-            <div class="col s8 m8 l8">
+
+            <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player2">
                 <span class="players">Player 2</span>
               </p>
             </div>
-            <div class="col s4 m4 l4">
-              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player2">
+
+            <div class="row">
+              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
                 <span id="score2">0000</span>
               </p>
             </div>
+
           </div>
         </div>
       </div>
@@ -70,7 +76,7 @@
         <div class="col s1 m1 l1 offset-s3 offset-m3 offset-l3">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category1'>
               <div class="card-content">
                 <p class="center" id="cat1"></p>
               </div>
@@ -80,7 +86,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category2'>
               <div class="card-content">
                 <p class="center" id="cat2"></p>
               </div>
@@ -90,7 +96,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category3'>
               <div class="card-content">
                 <p class="center" id="cat3"></p>
               </div>
@@ -100,7 +106,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category4'>
               <div class="card-content">
                 <p class="center" id="cat4"></p>
               </div>
@@ -110,7 +116,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category5'>
               <div class="card-content">
                 <p class="center" id="cat5"></p>
               </div>
@@ -120,7 +126,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category6'>
               <div class="card-content">
                 <p class="center" id="cat6"></p>
               </div>
