--- a/html/games/game3p.html
+++ b/html/games/game3p.html
@@ -22,14 +22,15 @@
       </div>
 
       <div class="row" id="playerContainer">
+
          <div class="col s2 m2 l2 offset-s2 offset-m2 offset-l2 noselect" >
           <div class="row">
-            <div class="col s8 m8 l8">
+            <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player1">
                 <span class="players">Player 1</span>
               </p>
             </div>
-            <div class="col s4 m4 l4">
+            <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
                 <span id="score1">0000</span>
               </p>
@@ -39,12 +40,12 @@
 
         <div class="col s2 m2 l2 offset-s1 offset-m1 offset-l1 noselect" >
           <div class="row">
-            <div class="col s8 m8 l8">
+            <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player2">
                 <span class="players">Player 2</span>
               </p>
             </div>
-            <div class="col s4 m4 l4">
+            <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
                 <span id="score2">0000</span>
               </p>
@@ -54,12 +55,12 @@
 
         <div class="col s2 m2 l2 offset-s1 offset-m1 offset-l1 noselect" >
           <div class="row">
-            <div class="col s8 m8 l8">
+            <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player3">
                 <span class="players">Player 3</span>
               </p>
             </div>
-            <div class="col s4 m4 l4">
+            <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
                 <span id="score3">0000</span>
               </p>
@@ -84,7 +85,7 @@
         <div class="col s1 m1 l1 offset-s3 offset-m3 offset-l3">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category1'>
               <div class="card-content">
                 <p class="center" id="cat1"></p>
               </div>
@@ -94,7 +95,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category2'>
               <div class="card-content">
                 <p class="center" id="cat2"></p>
               </div>
@@ -104,7 +105,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category3'>
               <div class="card-content">
                 <p class="center" id="cat3"></p>
               </div>
@@ -114,7 +115,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category4'>
               <div class="card-content">
                 <p class="center" id="cat4"></p>
               </div>
@@ -124,7 +125,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category5'>
               <div class="card-content">
                 <p class="center" id="cat5"></p>
               </div>
@@ -134,7 +135,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category6'>
               <div class="card-content">
                 <p class="center" id="cat6"></p>
               </div>
