--- a/html/games/game4p.html
+++ b/html/games/game4p.html
@@ -24,12 +24,12 @@
       <div class="row" id="playerContainer">
         <div class="col s2 m2 l2 offset-s2 offset-m2 offset-l2 noselect" >
          <div class="row">
-           <div class="col s8 m8 l8">
+           <div class="row">
              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player1">
                <span class="players">Player 1</span>
              </p>
            </div>
-           <div class="col s4 m4 l4">
+           <div class="row">
              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
                <span id="score1">0000</span>
              </p>
@@ -39,12 +39,12 @@
 
        <div class="col s2 m2 l2 noselect" >
          <div class="row">
-           <div class="col s8 m8 l8">
+           <div class="row">
              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player2">
                <span class="players">Player 2</span>
              </p>
            </div>
-           <div class="col s4 m4 l4">
+           <div class="row">
              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
                <span id="score2">0000</span>
              </p>
@@ -54,12 +54,12 @@
 
        <div class="col s2 m2 l2 noselect" >
          <div class="row">
-           <div class="col s8 m8 l8">
+           <div class="row">
              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player3">
                <span class="players">Player 3</span>
              </p>
            </div>
-           <div class="col s4 m4 l4">
+           <div class="row">
              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
                <span id="score3">0000</span>
              </p>
@@ -69,12 +69,12 @@
 
        <div class="col s2 m2 l2 noselect" >
          <div class="row">
-           <div class="col s8 m8 l8">
+           <div class="row">
              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player4">
                <span class="players">Player 4</span>
              </p>
            </div>
-           <div class="col s4 m4 l4">
+           <div class="row">
              <p class="z-depth-3 center #b0bec5 blue-grey lighten-3">
                <span id="score4">0000</span>
              </p>
@@ -99,7 +99,7 @@
         <div class="col s1 m1 l1 offset-s3 offset-m3 offset-l3">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category1'>
               <div class="card-content">
                 <p class="center" id="cat1"></p>
               </div>
@@ -109,7 +109,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category2'>
               <div class="card-content">
                 <p class="center" id="cat2"></p>
               </div>
@@ -119,7 +119,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category3'>
               <div class="card-content">
                 <p class="center" id="cat3"></p>
               </div>
@@ -129,7 +129,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category4'>
               <div class="card-content">
                 <p class="center" id="cat4"></p>
               </div>
@@ -139,7 +139,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category5'>
               <div class="card-content">
                 <p class="center" id="cat5"></p>
               </div>
@@ -149,7 +149,7 @@
         <div class="col s1 m1 l1">
           <h2 class="header"></h2>
           <div class="card horizontal">
-            <div class="card-stacked">
+            <div class="card-stacked" id='category6'>
               <div class="card-content">
                 <p class="center" id="cat6"></p>
               </div>
