refactored html, put it all in js

--- a/html/games/game3p.html
+++ b/html/games/game3p.html
@@ -4,8 +4,8 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Orbitron:500" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="../../css/gameboard.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="../../images/space-ship.png" />
     <title>Wikody: 3 Player</title>
   </head>
@@ -23,7 +23,7 @@
 
       <div class="row" id="playerContainer">
 
-         <div class="col s2 m2 l2 offset-s2 offset-m2 offset-l2 noselect" >
+        <div class="col s2 m2 l2 offset-s2 offset-m2 offset-l2 noselect" >
           <div class="row">
             <div class="row">
               <p class="z-depth-3 center #b0bec5 blue-grey lighten-3" id="player1">
@@ -74,7 +74,7 @@
           <div class="card horizontal" id="infoContainer">
             <div class="card-stacked">
               <div class="card-content">
-                <p class="center" id="gameInfo">Player 1 pick a category!</p>
+                <p class="center" id="gameInfo">Player 1, pick a category!</p>
               </div>
             </div>
           </div>
@@ -160,6 +160,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -178,6 +183,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -200,6 +210,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -218,6 +233,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -240,6 +260,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -258,6 +283,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -282,6 +312,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -300,6 +335,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -322,6 +362,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -340,6 +385,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -362,6 +412,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -380,6 +435,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -404,6 +464,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -422,6 +487,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -444,6 +514,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -462,6 +537,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -484,6 +564,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -502,6 +587,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -526,6 +616,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -544,6 +639,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -566,6 +666,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -584,6 +689,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -606,6 +716,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -624,6 +739,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -648,6 +768,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -666,6 +791,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -688,6 +818,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -706,6 +841,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -728,6 +868,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -748,6 +893,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -755,30 +905,18 @@
       </div>
 
       <footer class="page-footer #00695c teal darken-3">
-
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text">
-                <a class="grey-text text-lighten-3" href="../about.html">About</a>
-              </h5>
-            </div>
-
-            <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Navigate the mothership</h5>
+            </div>
+            <div class="col l4 offset-l2 s12">
               <ul>
-                <li><a class="grey-text text-lighten-3" href="../home.html">Home</a></li>
+                <li><a class="grey-text text-lighten-3" href="../home.html">The Bridge</a></li>
               </ul>
             </div>
           </div>
         </div>
-
-        <div class="footer-copyright">
-          <div class="container">
-          &copy; 2016 Tyler Miller
-          </div>
-        </div>
-
       </footer>
 
     </div>
