--- a/html/games/game2p.html
+++ b/html/games/game2p.html
@@ -65,7 +65,7 @@
           <div class="card horizontal" id="infoContainer">
             <div class="card-stacked">
               <div class="card-content">
-                <p class="center" id="gameInfo">Player 1 pick a category!</p>
+                <p class="center" id="gameInfo">Player 1, pick a category!</p>
               </div>
             </div>
           </div>
@@ -151,6 +151,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -169,6 +174,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -191,6 +201,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -209,6 +224,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -231,6 +251,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -249,6 +274,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -273,6 +303,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -291,6 +326,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -313,6 +353,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -331,6 +376,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -353,6 +403,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -371,6 +426,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -395,6 +455,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -413,6 +478,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -435,6 +505,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -453,6 +528,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -475,6 +555,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -493,6 +578,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -517,6 +607,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -535,6 +630,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -557,6 +657,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -575,6 +680,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -597,6 +707,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -615,6 +730,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -639,6 +759,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -657,6 +782,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -679,6 +809,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -697,6 +832,11 @@
                   </div>
                   <div class="col s6 m6 l6">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
                   </div>
                 </div>
               </div>
@@ -719,6 +859,11 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -739,6 +884,9 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Check My Answer</a>
                   </div>
                 </div>
+                <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
+                  <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat forfeit">I give up, What's the answer??</a>
+                </div>
               </div>
             </div>
           </div>
@@ -749,21 +897,13 @@
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text">
-                <a class="grey-text text-lighten-3" href="../about.html">About</a>
-              </h5>
+              <h5 class="white-text">Navigate the mothership</h5>
             </div>
             <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Navigate the mothership</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="../home.html">Home</a></li>
+                <li><a class="grey-text text-lighten-3" href="../home.html">The Bridge</a></li>
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="footer-copyright">
-          <div class="container">
-          &copy; 2016 Tyler Miller
           </div>
         </div>
       </footer>
