--- a/html/home.html
+++ b/html/home.html
@@ -4,6 +4,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:500" rel="stylesheet">
     <link rel="stylesheet" href="../css/home.css">
     <link rel="shortcut icon" href="../images/space-ship.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -13,9 +14,9 @@
 
     <div id="container">
 
-      <video playsinline autoplay muted loop id="bgvid">
+      <!-- <video playsinline autoplay muted loop id="bgvid">
         <source src="../images/sn-jeapordy.mp4" type="video/mp4">
-      </video>
+      </video> -->
 
       <div class="row">
         <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3 noselect" >
@@ -30,20 +31,29 @@
       </div>
 
       <div class="row">
+        <div class="col s4 m4 l4 offset-s2 offset-m2 offset-l2 noselect">
+          <p class="z-depth-2 center #b0bec5 blue-grey lighten-3"><span class="headers">Select Number of Players</span></p>
+        </div>
+        <div class="col s4 m4 l4 noselect">
+          <p><a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="help.html">Read the Operator's Manual</a></p>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="row">
-          <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4">
+          <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4 playerSelect">
             <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="games/game2p.html"> 2 Players</a>
           </div>
         </div>
 
         <div class="row">
-          <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4">
+          <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4 playerSelect">
             <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="games/game3p.html">3 Players</a>
           </div>
         </div>
 
         <div class="row">
-          <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4">
+          <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4 playerSelect">
             <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="games/game4p.html">4 Players</a>
           </div>
         </div>
