Added the help page

--- a/html/help.html
+++ b/html/help.html
@@ -11,40 +11,75 @@
     <div id="outer-container">
       <div id="inner-container">
         <div class="row">
-          <div class="col s6">
+          <div class="col s6 offset-s3">
             <div class="row">
-
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <span class="card-title">1) Waiting</span>
+                  <p>Please wait for the articles to load in before playing.
+                    This is indicated by the progress bar on top of the game's page.</p>
+                </div>
+              </div>
             </div>
             <div class="row">
-
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <span class="card-title">2) Picking</span>
+                  <p>Choose your category and point value.
+                    Categories are designated by column.</p>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="col s6">
             <div class="row">
-
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <span class="card-title">3) Guessing</span>
+                  <p>Most articles have an underlined space which
+                    indicates the article title. Wikipedia is not perfect, not all
+                    articles are formatted the same, so if there is no underlined
+                    space, try to guess what the name of the article would be.</p>
+                </div>
+              </div>
             </div>
             <div class="row">
-
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <span class="card-title">4) Scoring</span>
+                  <p>The player who guesses the title of the wikipedia page
+                    correctly is awarded the proper amount of points, and it becomes
+                    the next player's turn.</p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <span class="card-title">5) Forfeiting</span>
+                  <p>If the article is too hard, but you really need to know
+                    what movie says "I'll never let you go, Jack", there is an
+                    option indicated by the !? icon to give up the points and
+                    get the answer.</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
 
-    <footer class="page-footer #00695c teal darken-3">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Navigate the mothership</h5>
+        <footer class="page-footer #00695c teal darken-3">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Navigate the mothership</h5>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="home.html">The Bridge</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="col l4 offset-l2 s12">
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="home.html">The Bridge</a></li>
-            </ul>
-          </div>
-        </div>
+        </footer>
       </div>
-    </footer>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
