--- a/html/home.html
+++ b/html/home.html
@@ -16,22 +16,22 @@
       <div id="inner-container">
         <div class="row">
           <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3 noselect" >
-            <p class="z-depth-5 center #b0bec5 blue-grey lighten-3"><span class="headers">Wikody</span></p>
+            <p class="z-depth-5 center #b0bec5 blue-grey lighten-1"><span class="headers">Wikody</span></p>
           </div>
         </div>
 
         <div class="row">
           <div class="col s8 m8 l8 offset-s2 offset-m2 offset-l2 noselect">
-            <p class="z-depth-2 center #b0bec5 blue-grey lighten-3"><span class="headers">The Hardest Game of Jeapordy You'll Ever Play.</span></p>
+            <p class="z-depth-2 center #b0bec5 blue-grey lighten-1"><span class="headers">The Hardest Game of Jeapordy You'll Ever Play.</span></p>
           </div>
         </div>
 
         <div class="row">
           <div class="col s4 offset-s1 noselect">
-            <p class="z-depth-2 center #b0bec5 blue-grey lighten-3"><span class="headers">Select Number of Players</span></p>
+            <p class="z-depth-2 center #b0bec5 blue-grey lighten-1"><span class="headers">Select Number of Players</span></p>
           </div>
           <div class="col s2 noselect">
-            <p class="z-depth-2 center #b0bec5 blue-grey lighten-3"><span class="headers">OR</span></p>
+            <p class="z-depth-2 center #b0bec5 blue-grey darken-3"><span class="headers">OR</span></p>
           </div>
           <div class="col s4 m4 l4 noselect">
             <p><a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="help.html">Read the Operator's Manual</a></p>
