Added custom 404 page, deployed on surge

--- a/html/game.html
+++ b/html/game.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Orbitron:500" rel="stylesheet">
     <link rel="stylesheet" href="../../css/gameboard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="shortcut icon" href="../../images/space-ship.png" />
+    <link rel="shortcut icon" href="../images/space-ship.png" />
     <title>Wikody: Game</title>
   </head>
   <body class="noselect">
@@ -57,7 +57,7 @@
             </div>
             <div class="col l4 offset-l2 s12">
               <ul>
-                <li><a class="grey-text text-lighten-3" href="home.html">The Bridge</a></li>
+                <li><a class="grey-text text-lighten-3" href="../index.html">The Bridge</a></li>
               </ul>
             </div>
           </div>
