--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@
             <p class="z-depth-2 center #b0bec5 blue-grey darken-3"><span class="headers">OR</span></p>
           </div>
           <div class="col s4 m4 l4 noselect">
-            <p><a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="help.html">Read the Operator's Manual</a></p>
+            <p><a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="html/help.html">Read the Operator's Manual</a></p>
           </div>
         </div>
 
         <div class="row">
           <div class="row">
             <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4 playerSelect">
-              <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3 players" href="game.html">2 Players</a>
+              <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3 players" href="html/game.html">2 Players</a>
             </div>
           </div>
 
           <div class="row">
             <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4 playerSelect">
-              <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3 players" href="game.html">3 Players</a>
+              <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3 players" href="html/game.html">3 Players</a>
             </div>
           </div>
 
           <div class="row">
             <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4 playerSelect">
-              <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3 players" href="game.html">4 Players</a>
+              <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3 players" href="html/game.html">4 Players</a>
             </div>
           </div>
         </div>
