--- a/html/help.html
+++ b/html/help.html
@@ -74,7 +74,7 @@
               </div>
               <div class="col l4 offset-l2 s12">
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="home.html">The Bridge</a></li>
+                  <li><a class="grey-text text-lighten-3" href="../index.html">The Bridge</a></li>
                 </ul>
               </div>
             </div>
