--- a/html/help.html
+++ b/html/help.html
@@ -57,7 +57,7 @@
                 <div class="card-content white-text">
                   <span class="card-title">5) Forfeiting</span>
                   <p>If the article is too hard, but you really need to know
-                    what movie says "I'll never let you go, Jack", there is an
+                    in what book did the Vogons destroyed the Earth, there is an
                     option indicated by the !? icon to give up the points and
                     get the answer.</p>
                 </div>
